# mshr

./: CMakeLists.txt  ChangeLog.rst  mshrConfig.cmake.in  release.conf
app/: mshrable.cpp
cmake/: FindTetGen.cmake
demo/python/: classic.py  csg-subdomains-2D.py  deathstar.py  icecream.py  materials.py  propeller.py  simple-csg-3D.py
doc/sphinx/: Makefile  README
doc/sphinx/source/: conf.py  index.rst
include/mshr/: ASCFileReader.h  CSGCGALDomain2D.h  CSGCGALDomain3D.h  CSGCGALMeshGenerator2D.h  CSGCGALMeshGenerator3D.h  CSGGeometries3D.h  CSGGeometry.h  CSGOperators.h  CSGPrimitives2D.h  CSGPrimitives3D.h  DolfinMeshUtils.h  MeshGenerator.h  OFFFileReader.h  STLFileReader.h  SurfaceConsistency.h  SurfaceReconstruction.h
python/: CMakeLists.txt  config.json.in  setup.py
python/mshr/: __init__.py
python/src/: mshr.cpp
src/: ASCFileReader.cpp  CSGCGALDomain2D.cpp  CSGCGALDomain3D.cpp  CSGCGALMeshGenerator2D.cpp  CSGCGALMeshGenerator3D.cpp  CSGGeometries3D.cpp  CSGGeometry.cpp  CSGOperators.cpp  CSGPrimitives2D.cpp  CSGPrimitives3D.cpp  DolfinMeshUtils.cpp  FuzzyPointLocator.h  MeshGenerator.cpp  Meshes.cpp  OFFFileReader.cpp  Polygon_utils.h  Polyhedral_multicomponent_mesh_domain_with_features_3.h  Polyhedron_utils.h  STLFileReader.cpp  SurfaceConsistency.cpp  SurfaceReconstruction.cpp  TetgenMeshGenerator3D.cpp  make_multicomponent_mesh_3.h  meshclean.h  smoothing.h
test/: CMakeLists.txt  test-ASCFileReader.py  test-csg-predicates.py  test-csg-primitives-2d.py  test-csggeometries.cpp  test-fuzzypointmap.py  test-mesh-generation.py  test-meshes.py  test-num-segments-2d.py
